# deep-learning-with-pytorch-ja

./: .gitignore  README.md  pyproject.toml
p1ch2/: 2_pre_trained_networks.ipynb
