[tool.poetry]
name = "deep-learning-with-pytorch-ja"
version = "0.1.0"
description = ""
authors = ["hachimada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
torchvision = "^0.17.1"
tensorboard = "^2.16.2"
scipy = "^1.12.0"
scikit-image = "^0.22.0"
pillow = "^10.2.0"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
h5py = "^3.10.0"
blosc = "^1.11.1"
diskcache = "^5.6.3"
simpleitk = "^2.3.1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
